<resources>
    <string name="app_name" translatable="false">Updater</string>
    <string name="app_version" translatable="false">%1$s(%2$s)</string>
    <string name="app_about">About</string>
    <string name="app_summary">Get HyperOS/MIUI update info</string>
    <string name="app_github">View source code on &lt;a href=\"https://github.com/YuKongA/Updater\">GitHub&lt;/a></string>
    <string name="login">Login</string>
    <string name="code_name">Code Name</string>
    <string name="device_name">Device Name</string>
    <string name="system_version">System Version</string>
    <string name="android_version">Android Version</string>
    <string name="submit">Submit</string>
    <string name="big_version">Major Version</string>
    <string name="filename">File Name</string>
    <string name="filesize">File Size</string>
    <string name="download">Download Url</string>
    <string name="changelog">Changelog</string>
    <string name="branch">Branch</string>
    <string name="toast_no_info">No information!</string>
    <string name="toast_copied_to_pasteboard">Copied to pasteboard</string>
    <string name="account">Account</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="logging_in">Logging in</string>
    <string name="login_successful">Login successful</string>
    <string name="request_sign_failed">Request for _sign failed!</string>
    <string name="account_or_password_empty">Account or Password empty!</string>
    <string name="no_account">No account</string>
    <string name="login_desc">Using v1 interface</string>
    <string name="using_v2">Using v2 interface</string>
    <string name="logged_in">Logged in</string>
    <string name="official" translatable="false">Official (%1$s)</string>
    <string name="cdn1" translatable="false">CDN (cdnorg)</string>
    <string name="cdn2" translatable="false">CDN (azureedge)</string>
    <string name="cdn3" translatable="false">CDN (aliyuncs)</string>
    <string name="official1_link" translatable="false">https://ultimateota.d.miui.com/%1$s/%2$s</string>
    <string name="official2_link" translatable="false">https://bigota.d.miui.com/%1$s/%2$s</string>
    <string name="cdn1_link" translatable="false">https://cdnorg.d.miui.com/%1$s/%2$s</string>
    <string name="cdn2_link" translatable="false">https://cdn-ota.azureedge.net/%1$s/%2$s</string>
    <string name="cdn3_link" translatable="false">https://bkt-sgp-miui-ota-update-alisgp.oss-ap-southeast-1.aliyuncs.com/%1$s/%2$s</string>
    <string name="copy_button">Copy</string>
    <string name="download_button">Download</string>
    <string name="security_error">Failed to get security key</string>
    <string name="logout">Logout</string>
    <string name="confirm">Confirm</string>
    <string name="logout_successful">Logout successful</string>
    <string name="logout_desc">Are you sure you want to logout?</string>
    <string name="regions_code">Regions code</string>
    <string name="login_expired">Login expired</string>
    <string name="login_expired_desc">Recommended to login again</string>
    <string name="login_expired_dialog">Checked that the login has expired. It is recommended to log in again.</string>
    <string name="global">Global account</string>
    <string name="download_method">Download method</string>
    <string name="download_method_desc">Select the download method</string>
    <string name="android_default">Default</string>
    <string name="other">Other</string>
    <string name="download_start">Download has started</string>
    <string name="login_error">Incorrect account or password!</string>
    <string name="opensource_info">Copyright © 2024 YukongA, AkaneTan</string>
</resources>